# py_free_proxy

./: README.md  proxies.json  pyproject.toml  requirements_dev.txt  test.txt
py_free_proxy/: __free_proxy__.py  __init__.py  __logging.py  __main__.py  cli.py  exceptions.py  free_proxy.py  http_session.py  logging.py  logging.yaml  main.py  proxy.py
py_free_proxy/plugins/: __init__.py  free_proxy_list_net.py
py_free_proxy/sites/: __init__.py  free_proxy_list_net.py
tests/: test_free_proxy_list_net.py
